syntax = "proto3";
option go_package = "./pb";

enum RoomType {
    ROOM_TYPE_UNSPECIFIED = 0;
    STANDARD = 1;
    FREE = 2;
}

message RoomConfiguration {
    RoomType type = 3;
    string id = 1;
    string name = 5;
    uint64 expiry = 2;
    repeated string plugins = 4;
}